--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ email: "sivry@technion.ac.il"
 github: "Amir-Ivry"
 linkedin: ""
 twitter: ""
-google_scholar: "https://scholar.google.com/"
+google_scholar: https://scholar.google.com/citations?user=rQCVwksAAAAJ&hl=en&oi=ao
 
 logo: /assets/img/portrait.jpg
 favicon: /assets/img/portrait.jpg
