--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Amir Ivry"
-tagline: "Researcher"
+tagline: ""
 description: "Hi! I’m a postdoctoral researcher working on making speech, music, and audio systems more reliable using human perception as a compass."
 # Replace USERNAME below with your GitHub username
 url: "https://amir-ivry.github.io/"
