--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Amir Ivry"
 tagline: ""  # optional; shows under your name if non-empty
-description: "Hi! I’m a postdoctoral researcher working on making speech, music, and audio systems more reliable using human perception as a compass."
+description: "I study the broken compass problem in speech systems—when evaluation misleads research instead of guiding it."
 url: "https://amir-ivry.github.io"
 baseurl: ""
 author:
