--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -32,7 +32,7 @@
   authors: "Amir Ivry, Baruch Berdugo, Israel Cohen"
   venue: "IEEE Journal of Selected Topics in Signal Processing"
   year: 2019
-  link: "https://doi.org/10.1109/JSTSP.2019.2894322"
+  link: "/assets/papers/vad_ivry.pdf"
   code: ""
   project: ""
   video: ""
