--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ social:
   github: "Amir-Ivry"
   scholar: "https://scholar.google.com/citations?user=rQCVwksAAAAJ&hl=en&oi=ao"
   linkedin: "https://www.linkedin.com/in/amirivry/"
+  cv: "/assets/pdf/cv.pdf"
+
 
 markdown: kramdown
 kramdown: { input: GFM }
