--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -5,7 +5,7 @@ phd:
     
 msc:
   - name: "Yair Amar"
-    photo: "/assets/img/team/msc_first.jpg"
+    photo: "/assets/img/team/Yair_Amar.jpeg"
     field: "Probing and Analysis of Transformer-based Architectures for Speech Enhancement"
 
   - name: "Omer Holtzman"
