--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -92,7 +92,7 @@
   authors: "Elad Fisher, Amir Ivry, Roger Alimi, Eyal Weiss"
   venue: "AIP Advances"
   year: 2021
-  link: "/assets/papers/vad_ivry.pdf"
+  link: "/assets/papers/smartphone_ivry.pdf"
   code: ""
   project: ""
   video: ""
