--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,6 +1,6 @@
 - date: 2025-08-01
-  prefix: "Our paper"
+  prefix: "Our"
   link_text: "paper"
   url: "/assets/papers/summary_abram.pdf"
-  suffix: "`Summary of the NOTSOFAR-1 challenge: Highlights and learnings' has been accepted to Computer Speech & Language Journal!"          # optional
+  suffix: ""Summary of the NOTSOFAR-1 challenge: Highlights and learnings" has been accepted to Computer Speech & Language Journal!"          # optional
 
