--- a/_data/news.yml
+++ b/_data/news.yml
@@ -2,5 +2,5 @@
   prefix: "Our"
   link_text: "paper"
   url: "/assets/papers/summary_abram.pdf"
-  suffix: ""Summary of the NOTSOFAR-1 challenge: Highlights and learnings" has been accepted to Computer Speech & Language Journal!"          # optional
+  suffix: "\"Summary of the NOTSOFAR-1 challenge: Highlights and learnings\" has been accepted to Computer Speech & Language Journal!"          # optional
 
